[package]
name = "carrlink"
version = "0.1.0"
edition = "2021"
description = "Library for interfacing with the Carrera control unit."
authors = ["Fabian Meyer <rookfighter@posteo.org>"]
readme = "README.md"
repository = "https://github.com/Rookfighter/carrlink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
btleplug = "0.11"
futures = "0.3"
tokio = { version = "1", features = ["time"] }
uuid = "1.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
